Fix overflow issues on small screens [ci skip]

--- a/website/assets/css/_components/_misc.sass
+++ b/website/assets/css/_components/_misc.sass
@@ -15,8 +15,12 @@
         margin-bottom: 4rem
 
 .x-terminal__icons
+    display: none
     position: absolute
     padding: 10px
+
+    @include breakpoint(min, sm)
+        display: block
 
     &:before,
     &:after,
@@ -43,7 +47,6 @@
         &:after,
         span
             @include size(10px)
-
 
 .x-terminal__code
     margin: 0
